Add video section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <div class="link">
-        <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*e0pqxv*_gcl_au*MTY1NDg0MzMzMy4xNzM0Mjk2NjU1*_ga*MjcyNTg3NjIzNS4xNzM0Mjk2NTU4*_ga_3LRZM6TM9L*MTczNzQwNzUyMy41OC4xLjE3Mzc0MDc1MjkuNTQuMC4w#">Download Excursion (Coming Soon!)</a>
+        <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*e0pqxv*_gcl_au*MTY1NDg0MzMzMy4xNzM0Mjk2NjU1*_ga*MjcyNTg3NjIzNS4xNzM0Mjk2NTU4*_ga_3LRZM6TM9L*MTczNzQwNzUyMy41OC4xLjE3Mzc0MDc1MjkuNTQuMC4w#" target="_blank">Download Excursion (Coming Soon!)</a>
+    </div>
+    <div class="video">
+    <p><video autoplay loop muted>
+        <source src="resources/videos/excursion.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+        </video></p>
     </div>
 </body>
 </html>
