--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
         <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*e0pqxv*_gcl_au*MTY1NDg0MzMzMy4xNzM0Mjk2NjU1*_ga*MjcyNTg3NjIzNS4xNzM0Mjk2NTU4*_ga_3LRZM6TM9L*MTczNzQwNzUyMy41OC4xLjE3Mzc0MDc1MjkuNTQuMC4w#" target="_blank">Download Excursion (Coming Soon!)</a>
     </div>
     <div class="video">
-    <p><video autoplay loop muted>
-        <source src="resources/videos/excursion.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
+        <p><video autoplay loop muted>
+            <source src="resources/videos/excursion.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
         </video></p>
+    </div>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <div class="image">
+        <p><img src="resources/images/camp.jpg"></p>
     </div>
 </body>
 </html>
