Add copyright symbol

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#top">Download Excursion (Coming Soon!)</a>
     </div>
     <div class="footer">
-        Excursion
+        &#xA9; Excursion
     </div>
 </body>
 </html>
