--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
+    <!--HEADLINE-->
     <h1>Discover hidden places in the world around you</h1>
     <div class="link">
         <a href="#">Download Excursion (Coming Soon!)</a>
     </div>
+    
+    <!--MEDIA SECTION-->
     <p><video autoplay loop muted>
         <source src="resources/videos/excursion.mp4" type="video/mp4" />
         Your browser does not support the video tag.
@@ -17,11 +20,15 @@
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
     <p><img src="resources/images/camp.jpg"></p>
+    
+    <!--COMING SOON-->
     <p><img src="resources/images/phone.png"></p>
     <h2>Coming soon for iPhone and Android</h2>
     <div class="link">
         <a href="#top">Download Excursion (Coming Soon!)</a>
     </div>
+
+    <!--FOOTER-->
     <div class="footer">
         &#xA9; Excursion
     </div>
